--- a/mydbaas-framework/.classpath
+++ b/mydbaas-framework/.classpath
@@ -19,5 +19,7 @@
 	<classpathentry kind="lib" path="lib/postgresql-9.2-1002.jdbc4.jar"/>
 	<classpathentry kind="lib" path="lib/reflections-0.9.9-RC1-uberjar.jar"/>
 	<classpathentry kind="lib" path="lib/sigar.jar"/>
+	<classpathentry kind="lib" path="lib/jsch-0.1.49.jar"/>
+	<classpathentry kind="lib" path="lib/vraptor-3.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
